--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /MagicSquare/.vs/MagicSquare
+/.vs/KGCA40/v16/.suo
