--- a/Quadtree/Quadtree.vcxproj.filters
+++ b/Quadtree/Quadtree.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="TObject.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TCollision.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TQuadtree.h">
@@ -48,6 +51,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="TObject.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TCollision.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
