--- a/Octree/Octree.vcxproj
+++ b/Octree/Octree.vcxproj
@@ -157,6 +157,9 @@
     <ClInclude Include="TStd.h" />
     <ClInclude Include="TVector.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
