--- a/CreateWindow/CreateWindow.vcxproj
+++ b/CreateWindow/CreateWindow.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{50C026C3-2094-485B-A4F1-0ED5723831AC}</ProjectGuid>
-    <RootNamespace>Quadtree</RootNamespace>
+    <ProjectGuid>{f9967fd8-1b18-4f49-a2a8-503901b826b5}</ProjectGuid>
+    <RootNamespace>CreateWindow</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -79,7 +79,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <OutDir>../output/</OutDir>
-    <IntDir>../output/TOctree</IntDir>
+    <IntDir>../output/WindowSample</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -120,7 +120,7 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
@@ -141,24 +141,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Sample.h" />
+    <ClInclude Include="TWindow.h" />
+  </ItemGroup>
+  <ItemGroup>
     <ClCompile Include="Sample.cpp" />
-    <ClCompile Include="TCollision.cpp" />
-    <ClCompile Include="TNode.cpp" />
-    <ClCompile Include="TObject.cpp" />
-    <ClCompile Include="TOctree.cpp" />
-    <ClCompile Include="TStd.cpp" />
-    <ClCompile Include="TVector.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="TCollision.h" />
-    <ClInclude Include="TNode.h" />
-    <ClInclude Include="TObject.h" />
-    <ClInclude Include="TOctree.h" />
-    <ClInclude Include="TStd.h" />
-    <ClInclude Include="TVector.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram.cd" />
+    <ClCompile Include="TWindow.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
