--- a/CreateTimer/CreateTimer.vcxproj.filters
+++ b/CreateTimer/CreateTimer.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClInclude Include="TWindow.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TStd.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
