--- a/VertexTransform/VertexTransform.vcxproj.filters
+++ b/VertexTransform/VertexTransform.vcxproj.filters
@@ -39,5 +39,6 @@
   <ItemGroup>
     <Text Include="VertexShader.txt" />
     <Text Include="PixelShader.txt" />
+    <Text Include="ObjectData.txt" />
   </ItemGroup>
 </Project>
