--- a/KGCA40/SampleMap/SampleMap.vcxproj.filters
+++ b/KGCA40/SampleMap/SampleMap.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="TShape.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TMap.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp">
@@ -33,6 +36,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="TShape.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TMap.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
