--- a/KGCA40/SampleMap/SampleMap.vcxproj
+++ b/KGCA40/SampleMap/SampleMap.vcxproj
@@ -144,12 +144,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Sample.h" />
+    <ClInclude Include="TCamera.h" />
     <ClInclude Include="TMap.h" />
     <ClInclude Include="TModel.h" />
     <ClInclude Include="TShape.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp" />
+    <ClCompile Include="TCamera.cpp" />
     <ClCompile Include="TMap.cpp" />
     <ClCompile Include="TModel.cpp" />
     <ClCompile Include="TShape.cpp" />
