--- a/KGCA40/SampleMap/SampleMap.vcxproj.filters
+++ b/KGCA40/SampleMap/SampleMap.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="TMap.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TCamera.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp">
@@ -39,6 +42,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="TMap.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TCamera.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
