--- a/KGCA40/TEngineCore/TEngineCore.vcxproj
+++ b/KGCA40/TEngineCore/TEngineCore.vcxproj
@@ -153,10 +153,11 @@ copy "*.h" "..\\..\include"</Command>
     <ClCompile Include="TCore.cpp" />
     <ClCompile Include="TDevice.cpp" />
     <ClCompile Include="TInput.cpp" />
-    <ClCompile Include="TMatrix.cpp" />
+    <ClCompile Include="TMath.cpp" />
+    <ClCompile Include="XMatrix.cpp" />
     <ClCompile Include="TSound.cpp" />
     <ClCompile Include="TTimer.cpp" />
-    <ClCompile Include="TVector.cpp" />
+    <ClCompile Include="XVector.cpp" />
     <ClCompile Include="TWindow.cpp" />
     <ClCompile Include="TWrite.cpp" />
   </ItemGroup>
@@ -164,11 +165,12 @@ copy "*.h" "..\\..\include"</Command>
     <ClInclude Include="TCore.h" />
     <ClInclude Include="TDevice.h" />
     <ClInclude Include="TInput.h" />
-    <ClInclude Include="TMatrix.h" />
+    <ClInclude Include="TMath.h" />
+    <ClInclude Include="XMatrix.h" />
     <ClInclude Include="TSound.h" />
     <ClInclude Include="TStd.h" />
     <ClInclude Include="TTimer.h" />
-    <ClInclude Include="TVector.h" />
+    <ClInclude Include="XVector.h" />
     <ClInclude Include="TWindow.h" />
     <ClInclude Include="TWrite.h" />
   </ItemGroup>
