--- a/KGCA40/Quadtree/Quadtree.vcxproj
+++ b/KGCA40/Quadtree/Quadtree.vcxproj
@@ -147,7 +147,7 @@
     <ClCompile Include="TObject.cpp" />
     <ClCompile Include="TQuadtree.cpp" />
     <ClCompile Include="TStd.cpp" />
-    <ClCompile Include="TVector.cpp" />
+    <ClCompile Include="XVector.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TCollision.h" />
@@ -155,7 +155,7 @@
     <ClInclude Include="TObject.h" />
     <ClInclude Include="TQuadtree.h" />
     <ClInclude Include="TStd.h" />
-    <ClInclude Include="TVector.h" />
+    <ClInclude Include="XVector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
