--- a/KGCA40/Quadtree/Quadtree.vcxproj.filters
+++ b/KGCA40/Quadtree/Quadtree.vcxproj.filters
@@ -27,7 +27,7 @@
     <ClCompile Include="TStd.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="TVector.cpp">
+    <ClCompile Include="XVector.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="TObject.cpp">
@@ -47,13 +47,13 @@
     <ClInclude Include="TNode.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="TVector.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="TObject.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="TCollision.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="XVector.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
