--- a/KGCA40/SampleLodMap/SampleLodMap.vcxproj
+++ b/KGCA40/SampleLodMap/SampleLodMap.vcxproj
@@ -169,6 +169,7 @@
     <Text Include="lod.txt" />
     <Text Include="ObjectData.txt" />
     <Text Include="PixelShader.txt" />
+    <Text Include="StaticLod.txt" />
     <Text Include="VertexShader.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
