--- a/KGCA40/SampleLodMapNew/SampleLodMap.vcxproj.filters
+++ b/KGCA40/SampleLodMapNew/SampleLodMap.vcxproj.filters
@@ -64,6 +64,7 @@
     <Text Include="VertexShader.txt" />
     <Text Include="PixelShader.txt" />
     <Text Include="ObjectData.txt" />
+    <Text Include="lod.txt" />
     <Text Include="StaticLod.txt" />
   </ItemGroup>
 </Project>
