--- a/KGCA40/SampleFBXLoader/SampleFBXLoader.vcxproj.filters
+++ b/KGCA40/SampleFBXLoader/SampleFBXLoader.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClInclude Include="Sample.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TFbxObj.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TFbxObj.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
