--- a/KGCA40/TEngineCore/TEngineCore.vcxproj
+++ b/KGCA40/TEngineCore/TEngineCore.vcxproj
@@ -200,6 +200,9 @@ copy "*.h" "..\\..\include"
     <Text Include="..\..\data\shader\VertexShader.txt" />
     <Text Include="..\..\data\shader\VSMap.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="..\..\data\shader\DefaultShader.hlsl" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
