--- a/KGCA40/TEngineCore/TEngineCore.vcxproj.filters
+++ b/KGCA40/TEngineCore/TEngineCore.vcxproj.filters
@@ -146,4 +146,9 @@
       <Filter>shader</Filter>
     </Text>
   </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="..\..\data\shader\DefaultShader.hlsl">
+      <Filter>shader</Filter>
+    </FxCompile>
+  </ItemGroup>
 </Project>
