--- a/KGCA40/SampleFBXLoader/SampleFBXLoader.vcxproj
+++ b/KGCA40/SampleFBXLoader/SampleFBXLoader.vcxproj
@@ -151,6 +151,11 @@
     <ClCompile Include="Sample.cpp" />
     <ClCompile Include="TFbxObj.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TEngineCore\TEngineCore.vcxproj">
+      <Project>{5e241d3a-e46a-4ff0-a578-f345e68050b4}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
