--- a/KGCA40/SampleFBXLoader/SampleFBXLoader.vcxproj.filters
+++ b/KGCA40/SampleFBXLoader/SampleFBXLoader.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="TFbxObj.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TFbxMeshData.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
