--- a/KGCA40/SampleFBXLoader/SampleFBXLoader.vcxproj
+++ b/KGCA40/SampleFBXLoader/SampleFBXLoader.vcxproj
@@ -146,17 +146,24 @@
   <ItemGroup>
     <ClInclude Include="Sample.h" />
     <ClInclude Include="TFbxObj.h" />
+    <ClInclude Include="TMesh.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp" />
     <ClCompile Include="TFbxAnimation.cpp" />
     <ClCompile Include="TFbxMeshData.cpp" />
     <ClCompile Include="TFbxObj.cpp" />
+    <ClCompile Include="TMesh.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TEngineCore\TEngineCore.vcxproj">
       <Project>{5e241d3a-e46a-4ff0-a578-f345e68050b4}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="CharacterShader.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </FxCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
