--- a/KGCA40/TEngineCore/TEngineCore.vcxproj.filters
+++ b/KGCA40/TEngineCore/TEngineCore.vcxproj.filters
@@ -72,6 +72,12 @@
     <ClCompile Include="TShape.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TViewRT.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TViewDS.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TCore.h">
@@ -126,6 +132,12 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="TShape.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TViewRT.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TViewDS.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
