--- a/KGCA40/SampleFBXLoaderShadow/SampleFBXLoaderShadow.vcxproj
+++ b/KGCA40/SampleFBXLoaderShadow/SampleFBXLoaderShadow.vcxproj
@@ -79,7 +79,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <OutDir>../../output/</OutDir>
-    <IntDir>../../output/SampleProject</IntDir>
+    <IntDir>../../output/SampleProjectShadow</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
