--- a/KGCA40/TEngineCore/TEngineCore.vcxproj.filters
+++ b/KGCA40/TEngineCore/TEngineCore.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="TViewDS.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TDxState.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TCore.h">
@@ -138,6 +141,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="TViewDS.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TDxState.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
