--- a/KGCA40/SampleFBXDepthShadow/SampleFBXDepthShadow.vcxproj
+++ b/KGCA40/SampleFBXDepthShadow/SampleFBXDepthShadow.vcxproj
@@ -119,6 +119,7 @@
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>..\\..\\fbx\\include;..\\..\\include;..\\..\\include\\dxtk</AdditionalIncludeDirectories>
+      <DebugInformationFormat>None</DebugInformationFormat>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
