--- a/KGCA40b/TStudentSample/TStudentSample.vcxproj
+++ b/KGCA40b/TStudentSample/TStudentSample.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{d70c5ae7-58d2-422e-8d51-f9ce23ee88e3}</ProjectGuid>
-    <RootNamespace>LinkedList1</RootNamespace>
+    <ProjectGuid>{8c85d75a-4e99-4a97-92ad-585a1b9c00ee}</ProjectGuid>
+    <RootNamespace>TStudentSample</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -140,9 +140,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp" />
+    <ClCompile Include="TStudent.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Sample.h" />
+    <ClInclude Include="TStudent.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
