--- a/KGCA40b/TStudentSample/TStudentSample.vcxproj.filters
+++ b/KGCA40b/TStudentSample/TStudentSample.vcxproj.filters
@@ -18,9 +18,12 @@
     <ClCompile Include="Sample.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TStudent.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Sample.h">
+    <ClInclude Include="TStudent.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
