--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,10 @@
 /KGCA40b/.vs/KGCA40b/v16
 /KGCA40b/TStudentSample/x64/Debug
 /KGCA40b/x64/Debug
+/ConstSample/ConstSample.tlog
+/ConstSample/vc142.pdb
+/ConstSample/vc142.idb
+/ConstSample/Sample.obj
+/ConstSample/ConstSample.log
+/ConstSample/ConstSample.exe.recipe
+/ouput
